[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "y402"
version = "0.1.0"
description = "An implementation of x402 protocol, with some particular enhancements."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Luis Masuelli", email = "luismasuelli@hotmail.com" }]

dependencies = [
    "pydantic==2.12.4",
    "eth-account==0.13.7",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/luismasuelli/y402"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]